crates/vb_codegen/tests/compile-fail/forbid_unsafe.stderr
error: usage of an `unsafe` block
 --> tests/compile-fail/forbid_unsafe.rs
  |
  |     let _y: i32 = unsafe { x + 1 };
  |                   ^^^^^^^^^^^^^^^^
  |
note: the lint level is defined here
 --> tests/compile-fail/forbid_unsafe.rs
  |
  | #![forbid(unsafe_code)]
  |           ^^^^^^^^^^^

warning: unnecessary `unsafe` block
 --> tests/compile-fail/forbid_unsafe.rs
  |
  |     let _y: i32 = unsafe { x + 1 };
  |                   ^^^^^^ unnecessary `unsafe` block
  |
  = note: `#[warn(unused_unsafe)]` (part of `#[warn(unused)]`) on by default
